[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sap_config_hub"
authors = [
    {name = "Tejas Sinroja", email = "tejas.s@accely.com"}
]
description = "SAP Configuration Hub via Langgraph Agents"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests > 2.26.0",
    "pandas",
    "python-dotenv",
    "langchain_openai"
]